Fix text overflow issue when variables are long

--- a/src/default/assets/css/elements/_signatures.sass
+++ b/src/default/assets/css/elements/_signatures.sass
@@ -17,6 +17,7 @@
     border: 1px solid $COLOR_PANEL_DIVIDER
     font-family: $FONT_FAMILY_MONO
     font-size: $FONT_SIZE_MONO
+    overflow-x: scroll
 
     &.tsd-kind-icon
         padding-left: 30px
